--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 
 android {
     namespace 'com.shubham.swipenest'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.shubham.swipenest"
         minSdk 24
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -29,7 +29,8 @@ android {
 }
 
 dependencies {
-
+    // glide
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
