--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 
 android {
     namespace 'com.shubham.swipenest'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.shubham.swipenest"
         minSdk 24
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -33,6 +33,24 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+    //CircularImageView
+    implementation 'com.mikhaellopez:circularimageview:4.3.0'
+
+    //StoryPlayer
+    implementation 'com.github.shts:StoriesProgressView:3.0.0'
+
+    //GlideImageLoader
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    //CircularImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    // images and video picker
+    //implementation 'com.github.Mindinventory:Lassi:1.2.0'
+    implementation 'com.github.jkwiecien:EasyImage:3.2.0'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
