preview screen changed and addBtn added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/Theme.Swipenest"
         tools:targetApi="31">
         <activity
-            android:name=".ModalBottomSheetActivity"
+            android:name=".bottomSheet.ModalBottomSheetActivity"
             android:windowSoftInputMode="adjustPan"
             android:exported="true">
 <!--            <intent-filter>-->
@@ -31,14 +31,14 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".StoryPlayerActivity"
+            android:name=".story.StoryPlayerActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".story.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
