overlayed image on video but getting some error

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,14 @@ dependencies {
     // zoomable photo view
     implementation 'com.github.chrisbanes:PhotoView:2.0.0'
 
+    // color picker
+    implementation "com.github.duanhong169:colorpicker:1.1.6"
+    implementation 'com.github.duanhong169:checkerboarddrawable:1.0.2'
+
+    // ffmeg
+    implementation "com.arthenica:mobile-ffmpeg-full:4.4"
+    implementation "org.florescu.android.rangeseekbar:rangeseekbar-library:0.3.0"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
